[metadata]
name = proton
summary = OpenStack Gluon acts as a port arbiter between Nova and port-provider such as neutron
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    proton
data_files =
    models = models/*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
	proton-server = proton.cmd.api:main

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = proton/locale
domain = proton

[update_catalog]
domain = proton
output_dir = proton/locale
input_file = proton/locale/proton.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = proton/locale/proton.pot
